# galaxy-training

./: .gitignore  Cargo.toml  README.md
src/: main.rs  sample.toml
src/config/: date.rs  email.rs  mod.rs
src/galaxy/: client.rs  config.rs  mock.rs  mod.rs  types.rs
src/manager/: mod.rs
